--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
+/**** MENU ****/
+
+.navbar-brand {
+	width:100px;
+	height:100px;
+}
+
+/**** MEDIA QUERIES ****/
+
+
 @media all and (max-width: 938px) {
     .index-compte-rebour-hideMyText {
         display: none;
@@ -16,9 +26,12 @@
     }
 }
 
+
 @media all and (max-width: 650px) {
     .index-map-showMyMap {
         display: inherit;
+        max-height: 450px;
+        width: 100%;
     }
 }
 
@@ -28,10 +41,16 @@
     }
 }
 
-
 .index-map-constrainMyMap {
     max-height: 450px;
-    max-width: 650px;
+    width: 100%;
+    margin-right: 2em;
+}
+
+@media all and (max-width: 990px) {
+    .index-map-constrainMyMap {
+        margin-right: 0px;
+    }
 }
 
 /* ATTENTION, MODIFICATION DE BOOTSTRAP MEME */
@@ -44,4 +63,95 @@
 .row {
     margin-right: 0px;
     margin-left: 0px;
+}
+
+
+/* SECTION WINNER */
+
+.winner_section{
+	text-align: center;
+}
+
+.winner_section h2 {
+	text-align: center;
+}
+
+.winner_photo{
+    /*width: 100%;
+    height: auto;*/
+    max-width: 100%;
+}
+
+.winner_signature{
+	text-align: right;
+	color: blue;
+}
+
+.winner_soumettre{
+	border: 5px solid black;
+	text-align: center;
+	padding-top: 30px;
+	padding-bottom: 30px;
+}
+
+
+/* SECTION FOOTER */
+
+.footer_body
+{
+	width: 100%;
+}
+.footer_column
+{
+	text-align: center;
+	margin: 10px 0px 10px 0px;
+}
+.footer_column1 a
+{
+	display: block;
+}
+.footer_column img
+{
+	width: 40px;
+	margin: 0 10px 0 10px;
+}
+footer
+{
+	background: rgb(200, 200, 200);
+	padding: 10px 0 10px 0;
+}
+.footer_marginp
+{
+	margin: 0;
+	font-size: 12px;
+	width: 100%;
+}
+.footer_social_opacity a
+{
+	opacity: 1;
+	transition: 0.3s opacity ease;
+}
+.footer_social_opacity a:hover
+{
+	opacity: 0.7;
+}
+.footer_marginp2
+{
+	margin-bottom: 5px;
+}
+.footer2
+{
+	background: rgb(230, 230, 230);
+	border
+}
+.footer_input
+{
+	margin: 3px;
+}
+@media all and (max-width: 250px)
+{
+	.footer_input
+	{
+		width: 90%;
+	}
 }
