Intégration de la partie concept + images number

--- a/concept_contact.css
+++ b/concept_contact.css
@@ -1,8 +1,36 @@
+/* ATTENTION, MODIFICATION DE BOOTSTRAP MEME */
+
+.container-fluid {
+    padding-right: 0px;
+    padding-left: 0px;
+}
+
+.row {
+    margin-right: 0px;
+    margin-left: 0px;
+}
+
+/* SECTION CONCEPT */
+
+.centrer_photo {
+    display: block;
+    margin: auto;
+    max-width: 100%
+}
+
 /**** MENU ****/
 
 .navbar-brand {
 	width:100px;
 	height:100px;
+}
+
+/* SECTION CONCEPT */
+
+.centrer_photo {
+    display: block;
+    margin: auto;
+    max-width: 100%
 }
 
 /**** CONTACT ****/
