--- a/egnime-page.css
+++ b/egnime-page.css
@@ -38,7 +38,7 @@ CSS ENIGME EN COURS ------------------------------------------------------------
 {
 	position: absolute;
 	background-color: black;
-	opacity: 0.7;
+	opacity: 0.5;
 	width: 100%;
 	height: 100%;
 }
@@ -49,13 +49,20 @@ CSS ENIGME EN COURS ------------------------------------------------------------
 	
 	/*border: 1px solid red;*/
 }
-.clue_number p
+.white_color
 {
 	/*border: 1px solid red;*/
 	text-align: center;
 	font-size: 40px;
 	font-weight: bold;
 	color: white;
+}
+.color_clue 
+{
+	text-align: center;
+	font-size: 40px;
+	font-weight: bold;
+	color: rgb(60, 60, 60);
 }
 .indice_hover:hover
 {
@@ -66,10 +73,6 @@ CSS ENIGME EN COURS ------------------------------------------------------------
 	margin: 0;
 	padding: 0;
 }
-.encours_carrousel_row
-{
-	border: 1px solid blue;
-}
 .encours_enigme
 {
 	margin-top: 20px;
@@ -79,10 +82,6 @@ CSS ENIGME EN COURS ------------------------------------------------------------
 {
 	width: 100%;
 	height: 100%;
-}
-.encours-img
-{
-	width: 100%;
 }
 .no-gutters-enigme
 {
@@ -97,11 +96,11 @@ CSS ENIGME EN COURS ------------------------------------------------------------
 }
 .encours_carousel_control_next
 {
-	border: 2px solid black;
+	/*border: 2px solid black;*/
 }
 .encours_carousel_control_prev
 {
-	border: 2px solid black;
+	/*border: 2px solid black;*/
 }
 .sr-only
 {
