Logo Navbar identiques toutes pages

--- a/concept_contact.css
+++ b/concept_contact.css
@@ -23,12 +23,18 @@ H E A D E R
     max-width: 100%
 }
 
-/**** MENU ****/
+/***************** 
+L O G O & M E N U 
+******************/
 
 
 .navbar-brand {
-	width:150px;
-	height:150px;
+	width:130px;
+	height:130px;
+}
+
+.navbar-nav {
+    font-size: 20px;
 }
 
 @media (max-width: 574px) {
@@ -37,9 +43,9 @@ H E A D E R
 		height:80px;
 	}
 }
-/**** 
+/***************** 
 F I N  H E A D E R 
-****/
+******************/
 
 
 /**** 
@@ -86,10 +92,11 @@ C O N T A C T
 }
 
 .img-paris {
-	height: 490px;
+	height: 450px;
 	width: 80%;
-	margin-top: 50px;
+	margin-top: 30px;
 	max-width: 100%;
+	margin-left: 20px;
 	
 }
 
@@ -102,15 +109,16 @@ C O N T A C T
 @media (min-width: 766px) {
 	.img-paris {
 		height: 450px;
-		width: 100%;
+		width: 400px;
+		margin-right: 20px;
 	}
 } 
 
 
 @media (min-width: 992px) {
 	.img-paris {
-		height: 450px;
-		width: 100%;
+		height: 420px;
+		width: 80%;
 	}
 }
 
@@ -118,7 +126,6 @@ C O N T A C T
 	.img-paris {
 		height: 450px;
 		width: 80%;
-		margin-left: 50px;
 	}
 }
 
