--- a/about.css
+++ b/about.css
@@ -1,10 +1,26 @@
+/***************** 
+L O G O & M E N U 
+******************/
 
-/**** MENU ****/
 
 .navbar-brand {
-	width:100px;
-	height:100px;
+	width:130px;
+	height:130px;
 }
+
+.navbar-nav {
+    font-size: 20px;
+}
+
+@media (max-width: 574px) {
+	.navbar-brand {
+		width:80px;
+		height:80px;
+	}
+}
+/***************** 
+F I N  H E A D E R 
+******************/
 
 /**** PAGE ABOUT.HTML ****/
 
