--- a/egnime-page.css
+++ b/egnime-page.css
@@ -1,3 +1,28 @@
+/***************** 
+L O G O & M E N U 
+******************/
+
+
+.navbar-brand {
+	width:130px;
+	height:130px;
+}
+
+.navbar-nav {
+    font-size: 20px;
+}
+
+@media (max-width: 574px) {
+	.navbar-brand {
+		width:80px;
+		height:80px;
+	}
+}
+/***************** 
+F I N  H E A D E R 
+******************/
+
+
 
 /*
 ##############################
