--- a/concept_contact.css
+++ b/concept_contact.css
@@ -23,12 +23,18 @@ H E A D E R
     max-width: 100%
 }
 
-/**** MENU ****/
+/***************** 
+L O G O & M E N U 
+******************/
 
 
 .navbar-brand {
-	width:150px;
-	height:150px;
+	width:130px;
+	height:130px;
+}
+
+.navbar-nav {
+    font-size: 20px;
 }
 
 @media (max-width: 574px) {
@@ -37,9 +43,9 @@ H E A D E R
 		height:80px;
 	}
 }
-/**** 
+/***************** 
 F I N  H E A D E R 
-****/
+******************/
 
 
 /**** 
@@ -86,10 +92,10 @@ C O N T A C T
 }
 
 .img-paris {
-	height: 490px;
-	width: 80%;
-	margin-top: 50px;
+	width: 100%;
+	margin-top: 40px;
 	max-width: 100%;
+	display: flex;
 	
 }
 
@@ -99,28 +105,33 @@ C O N T A C T
 	}
 }
 
-@media (min-width: 766px) {
+@media (min-width: 1066px) {
 	.img-paris {
-		height: 450px;
-		width: 100%;
-	}
-} 
-
-
-@media (min-width: 992px) {
-	.img-paris {
-		height: 450px;
-		width: 100%;
+		max-height: 500px;
+		max-width: 500px;
+		margin-left: 20px;
 	}
 }
 
-@media (min-width: 1200px) {
+
+
+@media (min-width: 1066px) {
 	.img-paris {
-		height: 450px;
-		width: 80%;
-		margin-left: 50px;
+		max-height: 500px;
+		max-width: 500px;
+		margin-left: 20px;
 	}
 }
+
+@media (max-width: 1066px) {
+	.img-paris {
+		max-height: 500px;
+		max-width: 500px;
+		margin-left: 20px;
+	}
+}
+
+
 
 
 /**** 
