--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,9 @@
-/***************** 
-L O G O & M E N U 
-******************/
-
+/**** MENU ****/
 
 .navbar-brand {
-    width:130px;
-    height:130px;
+	width:100px;
+	height:100px;
 }
-
-.navbar-nav {
-    font-size: 20px;
-}
-
-@media (max-width: 648px) {
-    .navbar-brand {
-        width:80px;
-        height:80px;
-    }
-}
-/***************** 
-F I N  H E A D E R 
-******************/
 
 /**** HIDE THE CLOCK ****/
 
