modifs page egnime carte partie égnime en cours

--- a/egnime-page.css
+++ b/egnime-page.css
@@ -29,6 +29,10 @@ F I N  H E A D E R
 CSS ENIGME EN COURS --------------------------------------------------------------------------------------------------------------
 ##############################
 */
+.titre_h2_enigme h2
+{
+	padding-top: ;
+}
 .clue
 {
 	position: relative;
@@ -108,6 +112,11 @@ CSS ENIGME EN COURS ------------------------------------------------------------
 	width: 100%;
 	height: 100%;
 }
+.carte_cours_img
+{
+	width: 100%;
+	height: auto;
+}
 .no-gutters-enigme
 {
 	margin-right: 0;
@@ -118,6 +127,48 @@ CSS ENIGME EN COURS ------------------------------------------------------------
 {
 	padding-right: 0;
 	padding-left: 0;
+}
+.encours_maps
+{
+	position: relative;
+}
+#number_indice1
+{
+	position: absolute;
+	top: 48%;
+	left: 50%;
+}
+#number_indice2
+{
+	position: absolute;
+	top: 8%;
+	right: 33%;
+}
+#number_indice3
+{
+	position: absolute;
+	bottom: 17%;
+	right: 45%;
+}
+#number_indice4
+{
+	position: absolute;
+	top: 60%;
+	left: 25%;
+}
+#number_indice5
+{
+	position: absolute;
+	bottom: 8%;
+	left: 45%;
+}
+.number_indice_hover
+{
+	transition: 0.3s all ease;
+}
+.number_indice_hover:hover
+{
+	opacity: 0.7;
 }
 .encours_carousel_control_next
 {
@@ -209,7 +260,7 @@ CSS ENIGME PRECEDENTE ----------------------------------------------------------
 {
 	.modal-dialog
 	{
-		min-width: 1100px;
+		min-width: 1000px;
 	}
 }
 @media (min-width: 993px) and (max-width: 1200px)
