--- a/egnime-page.css
+++ b/egnime-page.css
@@ -21,9 +21,6 @@ L O G O & M E N U
 /***************** 
 F I N  H E A D E R 
 ******************/
-
-
-
 /*
 ##############################
 CSS ENIGME EN COURS --------------------------------------------------------------------------------------------------------------
@@ -219,39 +216,36 @@ CSS ENIGME PRECEDENTE ----------------------------------------------------------
 	width: 100%;
 	height: auto;
 }
-.prec_indice_enigme
-{
+.prec_indice_enigme{
+
 	width: 100%;
 }
 .prec_img_enigme{
+	
 	width: 100%;
 	height: 100%;
 }
-.modal-dialog
-{
+.modal-dialog{
+
 	width: 100%;
 	height: auto;
 }
-.modal-content
-{
-	
-}
-.card-img-top
-{
+ 
+.card-img-top{
+
 	width: 100%;
 }
-.button_next
-{
+.button_next{
+
 	position: absolute;
 	right: -35px;
 }
-.button_prev
-{
+.button_prev{
+
 	position: absolute;
 	left: -35px;
 }
-.button_chevron
-{
+.button_chevron{
 	width: 30px;
 	height: 30px;
 	z-index: 1000;
@@ -265,6 +259,10 @@ CSS ENIGME PRECEDENTE ----------------------------------------------------------
 	display: flex;
 	direction: row;
 	justify-content: center;
+}
+.alerte_enigme_prec{
+	margin-top:20px;
+
 }
 @media (min-width: 1201px)
 {
