--- a/egnime-page.css
+++ b/egnime-page.css
@@ -261,8 +261,13 @@ CSS ENIGME PRECEDENTE ----------------------------------------------------------
 	justify-content: center;
 }
 .alerte_enigme_prec{
-	margin-top:20px;
+	/*margin-top:20px;*/
 
+}
+#carousel-enigme-prec{
+	width: 100%;
+	padding: 0;
+	margin: 0;
 }
 @media (min-width: 1201px)
 {
