--- a/styles.css
+++ b/styles.css
@@ -181,20 +181,28 @@
     padding-left: 2em !important;
 }
 
-.winner_soumettre{
-	border: 5px solid black;
+.winner_soumettre {
+    background-color: #E5E5E5;
 	text-align: center;
-	padding-top: 30px;
-    padding-bottom: 30px;
+	padding-top: 20%;
+    padding-bottom: 20%;
 }
 
-@media all and (max-width: 979px) {
+
+@media all and (max-width: 767px) {
+    .winner_soumettre {
+        padding: 1em;
+    }
+    
+}
+
+@media all and (max-width: 1043px) {
     .winner-bouton {
         display: none;
     }
 }
 
-@media all and (min-width: 979px) {
+@media all and (min-width: 1043px) {
     .winner-bouton-2 {
         display: none;
         }
