--- a/concept_contact.css
+++ b/concept_contact.css
@@ -95,12 +95,12 @@ C O N T A C T
 }
 
 .img-paris {
-	width: 100%;
-	margin-top: 40px;
-	max-width: 100%;
-	display: flex;
+	height: 500px;
+	width: 500px;
+	margin-top: 20px;
 	
 }
+
 
 @media (max-width: 766px) {
 	.img-paris {
@@ -108,31 +108,8 @@ C O N T A C T
 	}
 }
 
-@media (min-width: 1066px) {
-	.img-paris {
-		max-height: 500px;
-		max-width: 500px;
-		margin-left: 20px;
-	}
-}
 
 
-
-@media (min-width: 1066px) {
-	.img-paris {
-		max-height: 500px;
-		max-width: 500px;
-		margin-left: 20px;
-	}
-}
-
-@media (max-width: 1066px) {
-	.img-paris {
-		max-height: 500px;
-		max-width: 500px;
-		margin-left: 20px;
-	}
-}
 
 
 
