j'ai rajouté la fonction collpase au btn voir les mois precedents

--- a/egnime-page.css
+++ b/egnime-page.css
@@ -261,6 +261,12 @@ CSS ENIGME PRECEDENTE ----------------------------------------------------------
 	padding: 0;
 	margin: 0;
 }
+.carousel-past-enigme-prec{
+	width: 100%;
+	padding: 0;
+	margin: 0;
+}
+ 
 @media (min-width: 1201px)
 {
 	.modal-dialog
