--- a/concept_contact.css
+++ b/concept_contact.css
@@ -99,6 +99,36 @@ C O N T A C T
 F I N  C O N T A C T 
 *********************/
 
+/*
+Scroll
+*/
+ 
+  #myBtn {
+	display: none;
+	position: fixed;
+	bottom: 20px;
+	width: 64px;
+	height: 25px;
+	right: 30px;
+	z-index: 99;
+	font-size: 24px;
+	border: none;
+	outline: none;
+	background-color: grey;
+	color: white;
+	cursor: pointer;
+	border-radius: 0px;
+	opacity: 1;
+	background: url(https://bit.ly/2D5J6N6) no-repeat center center;
+	border: 1px solid #343434;
+  }
+  
+  #myBtn:hover {
+	background-color: blue;
+  }
+/*
+Fin Scroll
+*/
 
 
 
