modif image bicyclette

--- a/concept_contact.css
+++ b/concept_contact.css
@@ -105,17 +105,21 @@ C O N T A C T
 
 .img-paris {
 	display: block;
-	height: 546px;
+	min-height: 100%;
 	max-width: 100%;
 	margin: auto;
 }
 
 
-@media (max-width: 766px) {
+@media (max-width: 574px) {
 	.img-paris {
 		display: none;
 	}
 }
+
+
+
+
 /******************** 
 F I N  C O N T A C T 
 *********************/
