--- a/egnime-page.css
+++ b/egnime-page.css
@@ -111,7 +111,36 @@ CSS ENIGME EN COURS ------------------------------------------------------------
 	padding-right: 0;
 	padding-left: 0;
 }
-.encours_maps
+.maps_enigme_en_cours
+{
+	position: relative;
+	height: 550px;
+	width: 100%;
+	margin: 0 0 35px 0;
+}
+/*.maps_cache
+{
+	position: absolute;
+	height: 5%;
+	background-color: white;
+	top: 0;
+	width: 100%;
+	z-index: 2;
+}
+.maps_cache2
+{
+	position: absolute;
+	height: 5%;
+	background-color: white;
+	bottom: 0;
+	width: 100%;
+	z-index: 2;
+}*/
+.maps_absolute
+{
+	position: absolute;
+}
+/*.encours_maps
 {
 	position: relative;
 }
@@ -152,7 +181,7 @@ CSS ENIGME EN COURS ------------------------------------------------------------
 .number_indice_hover:hover
 {
 	opacity: 0.7;
-}
+}*/
 #carouselExampleControls-encours
 {
 	width: 100%;
@@ -164,6 +193,7 @@ CSS ENIGME EN COURS ------------------------------------------------------------
 	margin: 0;
 	padding: 0;
 }
+
 /*
 ##############################
 CSS ENIGME PRECEDENTE --------------------------------------------------------------------------------------------------------------
@@ -283,19 +313,32 @@ CSS ENIGME PRECEDENTE ----------------------------------------------------------
 	{
 		min-width: 900px;
 	}
+	.maps_enigme_en_cours
+	{
+		height: 400px;
+	}
 }
 @media (min-width: 769px) and (max-width: 992px)
 {
 	.modal-dialog
 	{
 		min-width: 700px;
-	} 
+
+	}
+	.maps_enigme_en_cours
+	{
+		height: 400px;
+	}
 }
 @media (min-width: 576px) and (max-width: 768px)
 {
 	.modal-dialog
 	{
 		min-width: 400px;
+	}
+	.maps_enigme_en_cours
+	{
+		height: 350px;
 	}
 }
 @media (max-width: 575px)
@@ -304,6 +347,10 @@ CSS ENIGME PRECEDENTE ----------------------------------------------------------
 	{
 		max-width: 400px;
 		margin: auto;		
+	}
+	.maps_enigme_en_cours
+	{
+		height: 300px;
 	}
 }
 @media (max-width: 768px)
