some changes in concept

--- a/general.css
+++ b/general.css
@@ -651,11 +651,12 @@ CSS ENIGME PRECEDENTE ----------------------------------------------------------
 /*************
 C O N C E P T 
 **************/
-.titre_h2_concept h2{
-	text-align: center;
-	font-weight: bold;
-	font-size: 2em;
+.titre_h2_concept {
+	text-align: center !important;
+	font-weight: bold !important;
+	font-size: 2em !important;
 }
+
 .centrer_photo {
     display: block;
     margin: auto;
@@ -739,9 +740,8 @@ C O N T A C T
 
 .img-paris {
 	display: block;
-	min-height: 100%;
-	max-width: 100%;
 	margin: auto;
+	max-height: 860px;
 }
 
 
