--- a/general.css
+++ b/general.css
@@ -526,7 +526,7 @@ CSS ENIGME PRECEDENTE ----------------------------------------------------------
   color:#fff;
   opacity:1;
 }
-.card{
+.card-image-enigme{
 	width: 100%;
 	height: auto;
 }
