--- a/general.css
+++ b/general.css
@@ -786,6 +786,55 @@ C O N C E P T
 	height: 40px;
 }
 
+/* Animation flèche */
+  
+  .wrap {
+	height: 100%;
+	width: 100%;
+	text-align: center;
+  }
+  
+  img {
+	height: 50px;
+	width: auto;
+  }
+  
+  
+  .bounce {
+	animation-iteration-count: infinite;
+	animation-duration: 1.5s;
+	animation: bounce 3.6s ease infinite;
+	transform-origin: 50% 50%;
+  }
+  
+  @keyframes bounce {
+	0% {
+	  transform: translateY(0);
+	}
+	5.55556% {
+	  transform: translateY(0);
+	}
+	11.11111% {
+	  transform: translateY(0);
+	}
+	22.22222% {
+	  transform: translateY(-15px);
+	}
+	27.77778% {
+	  transform: translateY(0);
+	}
+	33.33333% {
+	  transform: translateY(-15px);
+	}
+	44.44444% {
+	  transform: translateY(0);
+	}
+	100% {
+	  transform: translateY(0);
+	}
+  }
+  
+
 
 /*******************
 F I N  C O N C E P T 
